* 1.5rc4
    - accept single-letter and single-digit hostnames
    - complete fix to hosts backend's logic for temporary files (thanks Cameos)
    - fix file descriptor leak if "ps" command fails to run
    - fix whitelist module allowing some entries to be skipped (thanks Andrea Dal Farra)
    - fix rare assertion failure when logsucker is notified before the logging completes (thanks Colin Keith)

* 1.5rc3
    - performance and responsiveness improvements to the Log Sucker
    - fix process authentication possibly getting stuck on children
    - make blacklisting work from first blocking
    - fix a recognition problem for multilog files
    - improve logging
    - fix segfault from invalid free() when all DNS queries fail
    - fix man page's blacklisting section

* 1.5rc2
    - import newer SimCList solving possible saved blacklist inconsistency (thanks Richard Krakhofer)
    - fix compilation problem on Solaris
    - fix hosts backend's logic for temporary files (thanks Cameos)

* 1.5rc1
    - treat IPv4-mapped IPv6 addresses as IPv4
    - add support for IPv6 CIDR blocks (thanks Dimitry Andric) in whitelists
    - whitelist hosts in both the IPv4 and IPv6 addresses they map to

* 1.5beta3
    - recognize "last message repeated N times" contextually and per-source
    - attackers now gauged with *dangerousness* instead of attack counts (adjust your -a !)
    - support for Sendmail relaying abuse messages
    - support for vsftpd authentication failure messages
    - recognize messages of Gentoo's PAM implementation for authentication failure

* 1.5beta2  Jan 2010
    - support for Cucipop authentication failure messages
    - support for Exim ESMTP authentication failure messages
    - logsucker: handle files disappearing and reappearing at runtime
    - fix recognition of some IPv6 addresses

* 1.5beta1  Dec 2009
    - logsucker: sshguard can now get logs from many files at once
    - autonomously cut logging when not in debug mode