@@ -1,6 +1,6 @@
 SUBDIRS = parser fwalls
 
-AM_CFLAGS=-I. -std=c99 -Wall -D_XOPEN_SOURCE #-D_POSIX_C_SOURCE=200112L
+AM_CFLAGS=-I. -std=c99 -Wall -D_XOPEN_SOURCE=600 #-D_POSIX_C_SOURCE=200112L
 
 if DEBUG
 AM_CFLAGS+= -g
